# tauri-template

./: .gitignore  Cargo.toml  README.md  Trunk.toml  package-lock.json  styles.css
.github/: dependabot.yml
.github/workflows/: ci.yml  pr-welcome.yml  tauri-build.yml
.vscode copy/: settings.json
.zed/: settings.json
app/: Cargo.toml  tauri.conf.json
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
ui/: Cargo.toml  Trunk.toml  index.html  styles.css
ui/src/: app.rs
