[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Atliac"]
description = "tauri-isomorphic"
repository = "https://github.com/atliac/tauri-template"
documentation = "https://docs.rs/tauri-template"
homepage = "https://github.com/atliac/tauri-template"
readme = "README.md"
keywords = [""]
categories = [""]

[workspace]
resolver = "3"
members = ["ui", "app"]

[workspace.dependencies]
serde = "1"
serde_json = "1"
leptos = "0.8"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
